[package]
name = "pizza_curse_club_backend"
version = "0.1.0"
edition = "2021"
authors = ["Vitor Serigati de Oliveira Basso"]
rust-version = "1.79.0"
readme = "./README.md"
repository = "https://github.com/vitorserigati/pizza_curse_club_backend"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
csv = "1.3.0"
axum = "0.7.5"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.9"
